samples/_failures_safe/1761559842_55070c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20656197.c: In function ‘read_log_file’:
./samples/SAFE/__tmp_20656197.c:134:9: error: expected expression at end of input
  134 |         if (parse_log_line(line,
      |         ^~
./samples/SAFE/__tmp_20656197.c:134:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20656197.c:134:9: error: expected declaration or statement at end of input
